# PythonWeave1

./: COPYRIGHT.md  INSTALL_GUIDE.md  MANIFEST.in  QUICK_START.md  README.md  app.py  build_packages.py  components.py  download_script.py  package_and_download.sh  push_to_wandb.py  pyproject.toml  quantum_ai_assistant_win64.txt  quantum_ai_assistant_windows.txt  quantum_assistant.py  replit.nix  run_quantum_assistant.py  setup.py  utils.py  visualizations.py
.hidden_backup/: user_management.py.bak
.streamlit/: config.toml
attached_assets/: Pasted-streamlit-errors-StreamlitDuplicateElementKey-There-are-multiple-elements-with-the-same-key-social-1742416916661.txt
components/: __init__.py  artifact_manager.py  artifact_registry.py  authentication.py  batch_operations.py  cross_platform_connector.py  data_export.py  ibm_quantum_integration.py  integration_hub.py  payment_processor.py  post_to_wandb.py  project_explorer.py  project_operations.py  pull_from_wandb_component.py  push_to_wandb_component.py  quantum_assistant.py  quantum_security.py  run_details.py  satellite_network.py  social_auth.py  subscription_manager.py  sweep_analyzer.py  update_manager.py  user_management.py  wandb_sync.py
quantum_ai_assistant/: __init__.py  auto_updater.py  windows_updater.py
secure_assets/: .encoded_logo_backup  .logo_hash  .logo_metadata  .version_cache  ibm_config.json  users.json
secure_backup/: SECURITY_CHANGES.md  ibm_quantum_integration.py.bak
utils/: __init__.py  key_generator.py  logo_protection.py  network_connector.py  version_checker.py  visualization.py  (+1 more)
(+54 files in other folders)
