[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pennylane>=0.35.1",
    "plotly>=6.0.1",
    "qiskit>=1.4.2",
    "streamlit>=1.43.2",
    "wandb>=0.19.8",
    "xlsxwriter>=3.2.2",
]
