[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pennylane>=0.35.1",
    "plotly>=6.0.1",
    "streamlit>=1.43.2",
    "wandb>=0.19.8",
    "xlsxwriter>=3.2.2",
    "scikit-learn>=1.6.1",
    "matplotlib>=3.10.1",
    "pylatexenc>=2.10",
    "stripe>=11.6.0",
    "markdown>=3.7",
    "qiskit>=1.4.2",
    "qiskit-aer>=0.17.0",
    "qiskit-ibm-runtime>=0.37.0",
    "streamlit-oauth>=0.1.14",
    "authlib>=1.5.1",
    "requests>=2.32.3",
    "setuptools>=76.1.0",
]
